awesome communicator changes

--- a/Source/Calcium/Assets/Bundles/Settings.bundle/Root.plist
+++ b/Source/Calcium/Assets/Bundles/Settings.bundle/Root.plist
@@ -19,6 +19,16 @@
 			<string>PSGroupSpecifier</string>
 		</dict>
 		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Use Middleman</string>
+			<key>Key</key>
+			<string>useMiddleman</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
 			<key>AutocapitalizationType</key>
 			<string>None</string>
 			<key>AutocorrectionType</key>
