--- a/Source/Calcium/Uwabbit-Info.plist
+++ b/Source/Calcium/Uwabbit-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>bag.xml.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>moe.yzu.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
