--- a/Source/Calcium/Assets/Bundles/Settings.bundle/Root.plist
+++ b/Source/Calcium/Assets/Bundles/Settings.bundle/Root.plist
@@ -22,6 +22,24 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Authorization</string>
+			<key>Key</key>
+			<string>hasAuth</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSTextFieldSpecifier</string>
+			<key>Title</key>
+			<string>Password</string>
+			<key>Key</key>
+			<string>password</string>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>More</string>
